--- a/.github/workflows/main_dondesalimos.yml
+++ b/.github/workflows/main_dondesalimos.yml
@@ -1,7 +1,9 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
+# ============================================
+# Workflow para Build y Deploy de DondeSalimos API
+# Estructura: DondeSalimosAPI/DondeSalimos/Server/
+# ============================================
 
-name: Build and deploy ASP.Net Core app to Azure Web App - dondesalimos
+name: Build and deploy ASP.NET Core app to Azure Web App - dondesalimos
 
 on:
   push:
@@ -12,22 +14,24 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Restore dependencies
+        run: dotnet restore DondeSalimos.sln
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+      - name: Build solution
+        run: dotnet build DondeSalimos.sln --configuration Release --no-restore
+
+      - name: Publish project
+        run: dotnet publish DondeSalimos/Server/DondeSalimos.Server.csproj --configuration Release --no-build --output ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -38,22 +42,15 @@ jobs:
   deploy:
     runs-on: windows-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FFB2B9751700428FA5AF9158AE86ED2B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_23968C06950343819F7F3AC64AC597EF }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_DD93805E734F4507B488EB0B082D5724 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -62,4 +59,4 @@ jobs:
           app-name: 'dondesalimos'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DONDESALIMOS }}
