Se agrega API Google Places

--- a/DondeSalimosAPI/DondeSalimos/Server/appsettings.json
+++ b/DondeSalimosAPI/DondeSalimos/Server/appsettings.json
@@ -25,5 +25,7 @@
     "Issuer": "DondeSalimosAPI",
     "Audience": "DondeSalimosApp",
     "ExpirationInMinutes": 1440
-  }
+  },
+  "GoogleMapsApiKey": ""
 }
+
